--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "keyv",
+  "name": "keyv-shrink",
   "version": "2.0.2",
-  "description": "Simple key-value storage with support for multiple backends",
+  "description": "Simple key-value storage with support for multiple backends with shrinking/cleanup support",
   "main": "src/index.js",
   "scripts": {
     "test": "xo && nyc ava test/keyv.js",
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lukechilds/keyv.git"
+    "url": "git+https://github.com/MySidesTheyAreGone/keyv-shrink.git"
   },
   "keywords": [
     "key",
@@ -22,12 +22,12 @@
     "cache",
     "ttl"
   ],
-  "author": "Luke Childs <lukechilds123@gmail.com> (http://lukechilds.co.uk)",
+  "author": "MySidesTheyAreGone <mysidestheyaregone@protonmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/lukechilds/keyv/issues"
+    "url": "https://github.com/MySidesTheyAreGone/keyv-shrink/issues"
   },
-  "homepage": "https://github.com/lukechilds/keyv",
+  "homepage": "https://github.com/MySidesTheyAreGone/keyv-shrink",
   "dependencies": {
     "json-buffer": "3.0.0"
   },
@@ -36,10 +36,10 @@
     "coveralls": "^2.13.1",
     "eslint-config-xo-lukechilds": "^1.0.0",
     "@keyv/mongo": "*",
-    "@keyv/mysql": "*",
-    "@keyv/postgres": "*",
     "@keyv/redis": "*",
-    "@keyv/sqlite": "*",
+    "keyv-mysql-shrink": "*",
+    "keyv-postgres-shrink": "*",
+    "keyv-sqlite-shrink": "*",
     "@keyv/test-suite": "*",
     "nyc": "^11.0.3",
     "this": "^1.0.2",
